--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Brent</title>
+    <title>Portfolio | Brent Zaltsman</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
@@ -29,6 +29,27 @@
         <button class="visit-btn">Visit Github</button>
 
     </header>
+
+    <section id="about" class="about">
+        <div class="about-container">
+            <img src="/assets/image.jpeg" alt="">
+            <div class="info-box">
+                <div class="text">
+                    <h3>Hi, I'm</h3>
+                    <h1>Brent <span>Zaltsman</span></h1>
+                    <h3>I'm a</h3>
+                </div>
+                <div class="typing-text">
+                    <span></span>
+                </div>
+                <div class="socials">
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
 
