Add to Experience Section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><span>Brent Zaltsman</span></a>
+        <a href="#" class="logo"><span>Portfolio.</span></a>
 
         <ul class="nav-links">
             <li>
@@ -47,6 +47,27 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+    <section id="experience" class="experience">
+
+        <h2 class="section-title">Experience</h2>
+        <div class="experience-info">
+            <div class="grid">
+                <div class="grid-card">
+                    <i class="fa-solid fa-terminal"></i>
+                    <span>Cyber Professional</span>
+                    <h3>5 Years</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                </div>
+                <div class="grid-card">
+                    <i class="fa-solid fa-code"></i>
+                    <span>System Administrator</span>
+                    <h3>2 Years</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                </div>
+            </div>
+            <img src="/assets/image.jpeg" alt="">
         </div>
     </section>
 
