--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
         <i class="fa-light fa-bars" id="menu-burger"></i>
 
-        <button class="visit-btn">Visit Github</button>
+        <a href="https://github.com/AfricanHipp0"><button class="visit-btn">Visit Github</button></a>
 
     </header>
 
@@ -42,8 +42,8 @@
                     <span></span>
                 </div>
                 <div class="socials">
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <a href="https://github.com/AfricanHipp0"><i class="fa-brands fa-github"></i></a>
+                      <a href="https://www.linkedin.com/in/brent-zaltsman"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
 
@@ -70,7 +70,27 @@
             <img src="/assets/image.jpeg" alt="">
         </div>
     </section>
+    <section id="achievements" class="achievements">
 
+        <h2 class="section-title">Achievements</h2>
+        <div class="achievement-info">
+            <div class="achievements-grid">
+                <div class="achievements-card">
+                    <span>Offensive Security</span>
+                    <img src="/assets/OSCP.png" alt="">                
+                </div>
+                <div class="achievements-card">
+                    <span>SANS</span>
+                    <img src="/assets/GPEN.png" alt="">  
+                </div>
+                <div class="achievements-card">
+                    <span>XINTRA</span>
+                    <h3>Coming Soon!</h3>
+                    <img src="#" alt="">  
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
