added device compatability support

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#achievements">Achievements</a>
             </li>
         </ul>
-        <i class="fa-light fa-bars" id="menu-burger"></i>
+        <i class="fa-solid fa-bars" id="menu-burger"></i>
 
         <a href="https://github.com/AfricanHipp0"><button class="visit-btn">Visit Github</button></a>
 
@@ -58,6 +58,18 @@
                     <i class="fa-solid fa-terminal"></i>
                     <span>Cyber Professional</span>
                     <h3>5 Years</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                </div>
+                <div class="grid-card">
+                    <i class="fa-solid fa-code"></i>
+                    <span>System Administrator</span>
+                    <h3>2 Years</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                </div>
+                <div class="grid-card">
+                    <i class="fa-solid fa-code"></i>
+                    <span>System Administrator</span>
+                    <h3>2 Years</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
                 </div>
                 <div class="grid-card">
