Code changes, added additional image

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <span></span>
                 </div>
                 <div class="socials">
-                    <a href="https://github.com/AfricanHipp0"><i class="fa-brands fa-github"></i></a>
-                      <a href="https://www.linkedin.com/in/brent-zaltsman"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/AfricanHipp0" target="_blank"><i class="fa-brands fa-github"></i></a>
+                      <a href="https://www.linkedin.com/in/brent-zaltsman " target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
 
@@ -55,31 +55,27 @@
         <div class="experience-info">
             <div class="grid">
                 <div class="grid-card">
+                    <i class="fa-solid fa-list-check"></i>
+                    <span>Delivery Management</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                </div>
+                <div class="grid-card">
+                    <i class="fa-solid fa-people-group"></i>
+                    <span>Team Lead</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                </div>
+                <div class="grid-card">
                     <i class="fa-solid fa-terminal"></i>
-                    <span>Cyber Professional</span>
-                    <h3>5 Years</h3>
+                    <span>Penetration Testing</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
                 </div>
                 <div class="grid-card">
-                    <i class="fa-solid fa-code"></i>
-                    <span>System Administrator</span>
-                    <h3>2 Years</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
-                </div>
-                <div class="grid-card">
-                    <i class="fa-solid fa-code"></i>
-                    <span>System Administrator</span>
-                    <h3>2 Years</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
-                </div>
-                <div class="grid-card">
-                    <i class="fa-solid fa-code"></i>
-                    <span>System Administrator</span>
-                    <h3>2 Years</h3>
+                    <i class="fa-solid fa-server"></i>
+                    <span>System Administration</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
                 </div>
             </div>
-            <img src="/assets/image.jpeg" alt="">
+            <img src="/assets/image.png" alt="">
         </div>
     </section>
     <section id="achievements" class="achievements">
@@ -87,18 +83,24 @@
         <h2 class="section-title">Achievements</h2>
         <div class="achievement-info">
             <div class="achievements-grid">
+                <a href="https://www.credential.net/6c699fd9-bc09-40b3-9885-82f5a59ab84d#acc.Ak0SscEI" target="_blank">
                 <div class="achievements-card">
-                    <span>Offensive Security</span>
-                    <img src="/assets/OSCP.png" alt="">                
+                    <img src="/assets/OSCP.png" alt=""> 
+                    <h2>Offensive Security</h2>
+                    <p>Offensive Security Certified Professional</p>               
                 </div>
+                </a>
+                <a href="https://www.giac.org/certified-professional/Brent-Zaltsman/204169" target="_blank">
                 <div class="achievements-card">
-                    <span>SANS</span>
-                    <img src="/assets/GPEN.png" alt="">  
+                    <img src="/assets/GPEN.png" alt="">
+                    <h2>SANS</h2>
+                    <p>GIAC Penetration Tester</p>
                 </div>
+                </a>
                 <div class="achievements-card">
-                    <span>XINTRA</span>
-                    <h3>Coming Soon!</h3>
                     <img src="#" alt="">  
+                    <h3>Coming Soon!</h3>
+                    <h2>XINTRA</h2>
                 </div>
             </div>
         </div>
