--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><span>Portfolio.</span></a>
+        <a href="#" class="logo"><span>Brent Zaltsman.</span></a>
 
         <ul class="nav-links">
             <li>
                 <a href="#about">About</a>
             </li>
-
             <li>
                 <a href="#experience">Experience</a>
             </li>
-
             <li>
                 <a href="#achievements">Achievements</a>
             </li>
@@ -43,7 +41,7 @@
                 </div>
                 <div class="socials">
                     <a href="https://github.com/AfricanHipp0" target="_blank"><i class="fa-brands fa-github"></i></a>
-                      <a href="https://www.linkedin.com/in/brent-zaltsman " target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                      <a href="https://www.linkedin.com/in/brent-zaltsman" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
 
@@ -105,9 +103,6 @@
             </div>
         </div>
     </section>
-
-
-
     <script src="script.js"></script>
 </body>
 </html>
