--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
         <div class="experience-info">
             <div class="grid">
                 <div class="grid-card">
+                    <i class="fa-solid fa-terminal"></i>
+                    <span>Penetration Testing</span>
+                    <p>Conducting advanced security assessments across a range of environments, including web, infrastructure, and cloud platforms. Responsible for identifying critical vulnerabilities, exploiting complex security flaws, and delivering actionable recommendations to uplift security posture. Engaged in red teaming and threat simulation exercises to test detection and response capabilities. Works closely with stakeholders to ensure alignment with business risk and compliance requirements.</p>
+                </div>
+                <div class="grid-card">
                     <i class="fa-solid fa-list-check"></i>
                     <span>Delivery Management</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                    <p>Led delivery in a high-performing offensive security team delivering penetration testing and threat simulation engagements. Oversaw end-to-end project delivery and stakeholder engagement. Played a key role in strategic planning, capability uplift, and integration of offensive security activities into broader risk management programs.</p>
                 </div>
                 <div class="grid-card">
                     <i class="fa-solid fa-people-group"></i>
                     <span>Team Lead</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                    <p>I led a multidisciplinary team comprising a Security Delivery Specialist and a Systems Engineer. I was responsible for mentoring, task delegation, and performance development while ensuring delivery of high-quality offensive security engagements. I provided technical oversight, guided strategic prioritisation, and fostered a collaborative culture that emphasised continuous improvement and ownership. My leadership approach balanced operational execution with individual growth, resulting in increased efficiency and stronger delivery outcomes aligned with business and cyber risk objectives.</p>
                 </div>
-                <div class="grid-card">
-                    <i class="fa-solid fa-terminal"></i>
-                    <span>Penetration Testing</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
-                </div>
+
                 <div class="grid-card">
                     <i class="fa-solid fa-server"></i>
                     <span>System Administration</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, et voluptatem? Animi ipsam, labore enim sapiente excepturi nostrum eveniet saepe ex ad eius, dolores nisi. Quo ratione ut numquam sint?</p>
+                    <p>Delivered IT and security support services to a diverse client base, including infrastructure troubleshooting, system hardening, and user support. Assisted in the deployment of endpoint protection, network segmentation, and routine patch management. Gained hands-on experience across a range of IT systems while developing a strong foundation in cybersecurity principles and technical support.</p>
                 </div>
             </div>
-            <img src="/assets/image.png" alt="">
         </div>
     </section>
     <section id="achievements" class="achievements">
