--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h1>Brent <span>Zaltsman</span></h1>
                 </div>
                 <div class="typing-text">
-                    <span></span>
+                    <span>Penetration Tester</span>
                 </div>
                 <div class="socials">
                     <a href="https://github.com/AfricanHipp0" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -65,7 +65,7 @@
                 <div class="grid-card">
                     <i class="fa-solid fa-people-group"></i>
                     <span>Team Lead</span>
-                    <p>I led a multidisciplinary team comprising a Security Delivery Specialist and a Systems Engineer. I was responsible for mentoring, task delegation, and performance development while ensuring delivery of high-quality offensive security engagements. I provided technical oversight, guided strategic prioritisation, and fostered a collaborative culture that emphasised continuous improvement and ownership. My leadership approach balanced operational execution with individual growth, resulting in increased efficiency and stronger delivery outcomes aligned with business and cyber risk objectives.</p>
+                    <p>I led a multidisciplinary team comprising of a Security Delivery Specialist and a Systems Engineer. I was responsible for mentoring, task delegation, and performance development while ensuring delivery of high-quality offensive security engagements. I provided technical oversight, guided strategic prioritisation, and fostered a collaborative culture that emphasised continuous improvement and ownership. My leadership approach balanced operational execution with individual growth, resulting in increased efficiency and stronger delivery outcomes aligned with business and cyber risk objectives.</p>
                 </div>
 
                 <div class="grid-card">
