--- a/index.html
+++ b/index.html
@@ -104,5 +104,8 @@
         </div>
     </section>
     <script src="script.js"></script>
+  <footer class="footer">
+    <p>© 2025 AfricanHipp0. All rights reserved.</p>
+  </footer>
 </body>
 </html>
