--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <li>
                 <a href="#certificates">Certificates</a>
             </li>
+            <li>
+                <a href="#publications">Publications</a>
+            </li>
         </ul>
         <i class="fa-solid fa-bars" id="menu-burger"></i>
 
@@ -99,6 +102,23 @@
                     <img src="#" alt="">  
                     <h3>Coming Soon!</h3>
                     <h2>XINTRA</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+   <section id="publications" class="publications">
+        <h2 class="section-title">Publications</h2>
+        <div class="publications-info">
+            <div class="publications-grid">
+                <div class="publications-card">
+                    <div class="sql-terminal">
+                        <div class="sql-line">
+                            <span class="keyword">INSERT</span> <span class="identifier">skill</span> <span class="keyword">INTO</span> <span class="identifier">publications</span><span class="punctuation">;</span>
+                        </div>
+                        <div class="sql-error">
+                            <span class="comment">-- ERROR: You have no skill to insert</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
