--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section id="about" class="about">
         <div class="about-container">
-            <img src="/assets/image.jpeg" alt="">
+            <img src="/assets/BZ.jpg" alt="">
             <div class="info-box">
                 <div class="text">
                     <h3>Hi, I'm</h3>
@@ -98,10 +98,13 @@
                     <p>GIAC Penetration Tester - 2022</p>
                 </div>
                 </a>
+                <a href="https://www.xintra.org/certificates/2800:1vIl5n:WeYU67NulYuLJ9EJpWwmkBOsxhK92aUNfUb34HuIYkw" target="_blank">
                 <div class="certificates-card">
-                    <h3>Coming Soon!</h3>
+                    <img src="/assets/XINTRA.png" alt="">  
                     <h2>XINTRA</h2>
+                    <p>Attacking and Defending Azure & M365 - 2025</p>
                 </div>
+                </a>
             </div>
         </div>
     </section>
@@ -109,14 +112,12 @@
         <h2 class="section-title">Publications</h2>
         <div class="publications-info">
             <div class="publications-grid">
+                <a href="https://www.qualys.com/security-advisories/cve-2025-43079" target="_blank">
                 <div class="publications-card">
-                    <div class="sql-terminal">
-                        <div class="sql-line">
-                            <span class="keyword">INSERT</span> <span class="identifier">skill</span> <span class="keyword">INTO</span> <span class="identifier">publications</span><span class="punctuation">;</span>
-                        </div>
-                        <div class="sql-error">
-                            <span class="comment">-- ERROR: You have no skill to insert</span>
-                        </div>
+                    <img src="/assets/QUALYS.png" alt="">
+                    <h2>CVE-2025-43079</h2>
+                    <p>Local Privilege Escalation via Qualys Cloud Agents</p>
+                </div>
                     </div>
                 </div>
             </div>
