--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: null
+permalink: /publications/CVE-2025-43079/
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -112,7 +117,7 @@
         <h2 class="section-title">Publications</h2>
         <div class="publications-info">
             <div class="publications-grid">
-                <a href="https://www.qualys.com/security-advisories/cve-2025-43079" target="_blank">
+                <a href="/publications/CVE-2025-43079/">
                 <div class="publications-card">
                     <img src="/assets/QUALYS.png" alt="">
                     <h2>CVE-2025-43079</h2>
